--- a/app/assets/stylesheets/post.css.scss
+++ b/app/assets/stylesheets/post.css.scss
@@ -16,7 +16,7 @@
   }
 
   time {
-    margin: -1.4em 0 0;
+    margin: -2.4em 0 0;
     padding: 0;
     font-size: 16px;
     color: rgba(0,0,0,0.3);
